--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Hello Balaram</p>
     <h2>I am doing code to know all the things.</h2>
+    <p>Welcome to coding world</p>
+    <h3 class="balaram">Balaram is a good boy</h3>
+    <h3 id="coders">Hi Balaram</h3>
 </body>
 <script src="script.js"></script>
 </html>
