getting and setting attribute

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Hello Balaram</p>
     </div>
     <h2>  I am doing code to know all the things.  </h2>
+    <a href="https://www.geeksforgeeks.org/"> geeksforgeeks</a>
     <p>Welcome to coding world</p>
     <h3 class="balaram">Balaram is a good boy</h3>
     <h3 id="coders">Hi Balaram</h3>
