--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <p>Welcome to coding world</p>
     <h3 class="balaram">Balaram is a good boy</h3>
     <h3 id="coders">Hi Balaram</h3>
+    <h4>Balaram to do list is in below</h4>
+    <ul><li>Work</li>
+    <li>Eat</li>
+    <li>Sleep</li>
+    <li>Coding</li></ul>
+    <button class="clickMe">Click Me</button>
 </body>
 <script src="script.js"></script>
 </html>
