--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <style>
+        body{
+            background-color: rgb(24,78,78);
+            font: 300;
+            color: darkgray;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+        .hour,.minute,.second{
+            height: 75 px;
+            width: 50px;
+            margin: auto;
+            position: relative;
+            left: 100px;
+            background-color: rgb(253,129,241);
+            border: 1px;
+            color: aliceblue;
+        }
+    </style> -->
 </head>
 <body>
-    <div class="content">
+    <h2>Welcome Balaram !!</h2>
+
+    <!-- <div class="Clock">
+        <button class="hour"></button>
+        <button class="minute"></button>
+        <button class="second"></button>
+    </div> -->
+    <!-- <div class="content">
     <p>Hello Balaram</p>
     <h4>I am a developer</h4>
     </div>
@@ -14,13 +39,13 @@
     <a href="https://www.geeksforgeeks.org/"> geeksforgeeks</a>
     <p>Welcome to coding world</p>
     <h3 class="balaram">Balaram is a good boy</h3>
-    <h3 id="coders">Hi Balaram</h3>
-    <h4>Balaram to do list is in below</h4>
+    <h3 id="coders">Hi Balaram</h3> -->
+    <!-- <h4>Balaram to do list is in below</h4>
     <ul><li>Work</li>
     <li>Eat</li>
     <li>Sleep</li>
-    <li>Coding</li></ul>
-    <button class="clickMe">Click Me</button>
+    <li>Coding</li></ul> -->
+    <!-- <button class="clickMe">Click Me</button> -->
 </body>
 <script src="script.js"></script>
 </html>
